before gateway fix
