# Photo-prestiges/contest-service/routes/contests.js
@@ -111,7 +111,6 @@ router.post('/update', verifyToken, async (req, res) => {
 
         let contest = await Contest.findById( new ObjectId(id) )
 
-        // contest.image
         if (image && contest.image) {
             const oldImagePath = path.join(__dirname, '../../gateway/uploads', path.basename(contest.image));
             fs.unlinkSync(oldImagePath);
@@ -186,6 +185,54 @@ router.post('/register', verifyToken, async (req, res) => {
         res.status(500).send('Serverfout');
     }
 });
+
+// router.post('/updateSubmission', verifyToken, async (req, res) => {
+//     try {
+//         const { contestId } = req.body;
+//         let username = req.body.user
+//
+//         let user = await User.findOne({ username });
+//         if (!user) {
+//             return res.status(400).json({ msg: 'Gebruiker bestaat niet' });
+//         }
+//
+//         if(user.role !== 'participant') {
+//             return res.status(401).json({ msg: 'Je hebt niet de juiste rechten om je in te schrijven voor een wedstrijd' });
+//         }
+//
+//         let contest = await Contest.findById(contestId);
+//         if(!contest) {
+//             return res.status(400).json({ msg: 'Er bestaat geen wedstrijd met deze ID'})
+//         }
+//
+//         const existingSubmission = await Submission.findOne({ contest: contestId, participant: user._id });
+//         if (existingSubmission) {
+//             return res.status(400).json({ msg: 'Je hebt al deelgenomen aan deze wedstrijd' });
+//         }
+//
+//         let submission = new Submission({
+//             contest: contest,
+//             participant: user
+//         })
+//
+//         await submission.save();
+//
+//         if (channel) {
+//             const exchangeName = 'submission_exchange';
+//             const routingKey = 'submission.created';
+//             const message = JSON.stringify(submission);
+//             channel.publish(exchangeName, routingKey, Buffer.from(message), { persistent: true });
+//             console.log('Submission created message sent to RabbitMQ');
+//         } else {
+//             console.log('RabbitMQ channel is not available. Message not sent');
+//         }
+//
+//         res.json({ msg: 'Gebruiker succesvol aangemeld bij wedstrijd' });
+//     } catch (err) {
+//         console.error(err.message);
+//         res.status(500).send('Serverfout');
+//     }
+// });
 
 // Middleware om te controleren of het verzoek via de gateway komt
 function verifyToken(req, res, next) {
